Navbar collapse fixes

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -31,21 +31,7 @@ body{
     .navbar-collapse.collapse {
         display: none!important;
     }
-    .navbar-nav {
-        float: none!important;
-        margin: 7.5px -15px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .navbar-text {
-        float: none;
-        margin: 15px 0;
-    }
+
     /* since 3.1.0 */
     .navbar-collapse.collapse.in { 
         display: block!important;
@@ -53,14 +39,11 @@ body{
     .collapsing {
         overflow: hidden!important;
     }
-}
 
-@media (max-width: 768px){
-    body{
-      padding-top: 150px;
-    }  
+    .cart-table {
+      background-color: white;
+    }
 }
-
 
 /*------------------ Text between cart and login --------------*/
 
